--- a/foundry.toml
+++ b/foundry.toml
@@ -4,9 +4,9 @@ out = "out"
 libs = ["lib"]
 
 # If a test function uses more than 16 local variables you will get a compile error. Enable below variables to solve this error
-# optimizer = true
-# optimizer_runs = 200
-# via_ir = true
+optimizer = true
+optimizer_runs = 200
+via_ir = true
 
 remappings=["@uniswap/v2-core=lib/v2-core/", '@openzeppelin/=lib/openzeppelin-contracts/', "@uniswap/lib/=lib/solidity-lib/"]
 
